--- a/Parte 3/react-css/src/index.css
+++ b/Parte 3/react-css/src/index.css
@@ -3,4 +3,17 @@ body{
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   padding-bottom: 500px;
+  color: blue;
+}
+
+.ativado{
+  background-color: green;
+  color: white;
+  padding: 10px;
+}
+
+.desativado{
+  background-color: red;
+  color: white;
+  padding: 5px;
 }
